  (Martin <gzlist@googlemail.com>, #162502)

* Tolerate patches with leading noise in ``bzr-handle-patch``.
  (Toshio Kuratomi, Martin Pool, #502076)

API Changes
***********

* New ``bzrlib.initialize`` is recommended for programs using bzrlib to 
  run when starting up; it sets up several things that previously needed
  to be done separately.
  (Martin Pool, #507710)

* New method ``BzrDir.list_branches()`` that returns a sequence of branches 
  present in a control directory. (Jelmer Vernooij)

* Remove unused ``CommandFailed`` exception.
  (Martin Pool)

Internals
*********

* ``bzrlib.branchbuilder.BranchBuilder.build_snapshot`` now accepts a
  ``message_callback`` in the same way that commit does. (Robert Collins)

* ``bzrlib.builtins.Commit.run`` raises ``bzrlib.errors.BoundBranchOutOfDate``
  rather than ``bzrlib.errors.BzrCommandError`` when the bound branch is out
  of date. (Gary van der Merwe)

* ``bzrlib.commands.run_bzr`` is more extensible: callers can supply the
  functions to load or disable plugins if they wish to use a different
  plugin mechanism; the --help, --version and no-command name code paths
  now use the generic pluggable command lookup infrastructure.
  (Robert Collins)

* ``bzrlib.errors.BoundBranchOutOfDate`` has a new field ``extra_help``
  which can be set to add extra help to the error. (Gary van der Merwe)

* The methods ``BzrDir.create_branch()``, ``BzrDir.destroy_branch()`` and 
  ``BzrDir.open_branch()`` now take an optional ``name`` argument. 
  (Jelmer Vernooij)

Testing
*******

* bzr now has a ``.testr.conf`` file in its source tree configured
  appropriately for running tests with Testrepository
  (``https://launchpad.net/testrepository``). (Robert Collins)

* Documentation about testing with ``subunit`` has been tweaked.
  (Robert Collins)

* New ``bzrlib.tests.test_import_tariff`` can make assertions about what
  Python modules are loaded, to guard against startup time or library
  dependency regressions.