@@ -17,13 +17,12 @@
 """Export a Tree to a non-versioned directory.
 """
 
-import os
 import StringIO
 import sys
 import tarfile
 import time
 
-from bzrlib import errors, export, osutils
+from bzrlib import export, osutils
 from bzrlib.export import _export_iter_entries
 from bzrlib.filters import (
     ContentFilterContext,
@@ -32,7 +31,8 @@ from bzrlib.filters import (
 from bzrlib.trace import mutter
 
 
-def tar_exporter(tree, dest, root, subdir, compression=None, filtered=False):
+def tar_exporter(tree, dest, root, subdir, compression=None, filtered=False,
+                 use_tree_timestamp=False):
     """Export this tree to a new tar file.
 
     `dest` will be created holding the contents of this tree; if it
@@ -52,7 +52,10 @@ def tar_exporter(tree, dest, root, subdir, compression=None, filtered=False):
     for dp, ie in _export_iter_entries(tree, subdir):
         filename = osutils.pathjoin(root, dp).encode('utf8')
         item = tarfile.TarInfo(filename)
-        item.mtime = now
+        if use_tree_timestamp:
+            item.mtime = tree.get_file_mtime(ie.file_id, dp)
+        else:
+            item.mtime = now
         if ie.kind == "file":
             item.type = tarfile.REGTYPE
             if tree.is_executable(ie.file_id):
@@ -89,9 +92,13 @@ def tar_exporter(tree, dest, root, subdir, compression=None, filtered=False):
     ball.close()
 
 
-def tgz_exporter(tree, dest, root, subdir, filtered=False):
-    tar_exporter(tree, dest, root, subdir, compression='gz', filtered=filtered)
+def tgz_exporter(tree, dest, root, subdir, filtered=False,
+                 use_tree_timestamp=False):
+    tar_exporter(tree, dest, root, subdir, compression='gz',
+                 filtered=filtered, use_tree_timestamp=use_tree_timestamp)
 
 
-def tbz_exporter(tree, dest, root, subdir, filtered=False):
-    tar_exporter(tree, dest, root, subdir, compression='bz2', filtered=filtered)
+def tbz_exporter(tree, dest, root, subdir, filtered=False,
+                 use_tree_timestamp=False):
+    tar_exporter(tree, dest, root, subdir, compression='bz2',
+                 filtered=filtered, use_tree_timestamp=use_tree_timestamp)
